salesforce/force-app/main/default/objects/Vastify_Interaction__x/Vastify_Interaction__x.object-meta.xml
<CustomObject>
    <label>Vastify Interaction</label>
    <pluralLabel>Vastify Interactions</pluralLabel>
    <externalDataSource>Vastify_OData</externalDataSource>
    <externalName>Interaction</externalName>
    <externalRepository></externalRepository>
    <nameField>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
        <externalDeveloperName>Id</externalDeveloperName>
    </nameField>
</CustomObject>