salesforce/force-app/main/default/objects/Vastify_Interaction__x/fields/IsArchived__c.field-meta.xml
<CustomField>
    <fullName>IsArchived__c</fullName>
    <label>Is Archived</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsArchived</externalDeveloperName>
</CustomField>