salesforce/force-app/main/default/objects/Vastify_Interaction__x/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload</label>
    <type>Text</type>
    <length>255</length>
    <externalDeveloperName>Payload</externalDeveloperName>
</CustomField>