salesforce/force-app/main/default/objects/Vastify_Interaction__x/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Text</type>
    <length>255</length>
    <externalDeveloperName>Subject</externalDeveloperName>
</CustomField>