salesforce/force-app/main/default/objects/Vastify_Interaction__x/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
    <externalDeveloperName>Timestamp</externalDeveloperName>
</CustomField>