salesforce/force-app/main/default/objects/Vastify_Interaction__x/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Text</type>
    <length>40</length>
    <externalDeveloperName>Type</externalDeveloperName>
</CustomField>